# NumMethHaskell

./: BierEtAlMain.hs  Brownian.lhs  BrownianChart.hs  Chapter1.lhs  Chapter2.lhs  Chart.hs  Diagrams.hs  DynSys.bib  Estimating Parameters1.R  Estimating Parameters1.ipynb  Estimating Parameters1.md  Filtering.lhs  ForTrevor.hs  ForTrevor.jl  FunWithKalmanPart1.lhs  FunWithKalmanPart1a.lhs  GettingDataInRandHaskell.lhs  Importance.lhs  Insurely.org  InsurelyII.org  JuliaCPU.jl  Kalman.bib  Kalman1.lhs  KalmanChart.hs  LorenzGenerate.bi  LorenzState.bi  Preface.org  README.md  Resampling.lhs  ResamplingMain.hs  RunAccGPU.hs  Symplectic.lhs  SymplecticMain.hs  TSP.hs  Tribbles.lhs  TribblesMain.hs  build.hs  ghc-fabs-tex.tex
Blog/: About.htm  EstimatingChaotic.htm  Previous.htm  TestOnly.htm
ForTidying/: BierEtAl.lhs  BierEtAlChart.hs  Chapter1a.lhs  DynSys.bib  FilteringMain.hs  ForTrevor.hs  FunWithKalmanPart1.lhs  FunWithKalmanPart1a.lhs  Importance.lhs  Insurely.org  InsurelyII.org  JuliaCPU.jl  KalmanChart.hs  ResamplingChart.hs  RunAccGPU.hs  Symplectic.lhs  Tribbles.lhs  build.hs  ghc-fabs-tex.tex  ghc-hacking.lhs
Frames/: ChangeLog.md  ProductionData.cabal  Text.hs  stack.yaml
HaskellX/: ChangeLog.md  Test.lhs  (+4 more)
Prediction/: CHANGELOG.md  Heat2D.hs  LICENSE  One Dimensional Heat Equation.html  One Dimensional Heat Equation.ipynb  Prediction.cabal  Prediction.lhs  TBA.nix  Two Dimensional Heat Equation.hs  Two Dimensional Heat Equation.ipynb  ark_heat1D.lhs  default.nix  plot_heat1E.py  release.nix  shell.nix  test.nix
Prediction/CustomSundials/: default.nix
(+34 files in other folders)
