cabal-version:       2.4

name:                Prediction
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
category:            Math
extra-source-files:  CHANGELOG.md

executable Prediction
  main-is:             Prediction.lhs
  build-depends:       base ^>=4.12.0.0,
                       hmatrix-sundials,
                       hmatrix,
                       diagrams-cairo,
                       diagrams-lib,
                       diagrams-rasterific,
                       Naperian,
                       Chart,
                       Chart-diagrams,
                       cassava
  default-language:    Haskell2010
